More statics, more boxing avoidance, more cleanup